fix label visibility

--- a/front/styles.css
+++ b/front/styles.css
@@ -356,8 +356,6 @@ body {
 	align-items: center;
 	padding: 0.375rem 0;
 	color: var(--primary-color);
-	font-size: .625rem;
-	text-transform: uppercase;
 	cursor: pointer;
 	transition: all 0.20s linear;
 }
